Mon Sep  5 17:03:07 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/ostruct.rb: a patch from Florian Gross <florgro@gmail.com>
	  merged to allow recursive inspect (and to_s) for OpenStruct.
	  [ruby-core:05532]

Mon Sep  5 08:20:19 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/observer.rb: a patch from nornagon <nornagon@gmail.com>
	  merged to allow arbitrary names for update methods.
	  [ruby-core:05416]

Mon Sep  5 07:01:12 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/openssl/lib/openssl/buffering.rb (Buffering#do_write):
	  should clear data from the buffer which already been output.

Sun Sep  4 15:01:35 2005  Minero Aoki  <aamine@loveruby.net>

	* parse.y (f_arg): Ripper should not do semantic check.
	  [ruby-dev:26948]

Sat Sep  3 23:52:35 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_fcall): new method to avoid inefficiency of
	  obj.instance_eval{send(...)} tricks.

Sat Sep  3 13:59:31 2005  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Pathname#descend): Pathname.new("./a/b/c").descend
	  didn't yield "."
	  (Pathname#ascend): ditto.

Fri Sep  2 23:51:54 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_arg): f_norm_arg is a VALUE in ripper, not an ID.
	  fixed: [ruby-dev:26942]

	* lib: do not use __send__ to access private methods.  [ruby-dev:26935]

Thu Sep  1 17:11:25 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call0): wrong condition for $SAFE restoration.

Thu Sep  1 14:12:45 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: On Tcl8.5, MultiTkIp#invoke_hidden doesn't
	  work (gives wrong order of arguments).

	* ext/tk/lib/multi-tk.rb: add MultiTkIp#invoke_hidden_on_namespace
	  to support '-namespace' option of 'interp invokehidden' command
	  on Tcl8.5.

Wed Aug 31 14:41:30 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (OPTFLAGS): default global optimization to
	  disabled for all VC++ versions.  fixed: [ruby-dev:26897]
